--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Assignment No: 1</title>
-        <meta name="description" content="Build a Static Responsive website using HTML, CSS and Bootstrap." />
-
-        <!-- Google / Search Engine Tags -->
-        <meta itemprop="name" content="Assignment No: 1" />
-        <meta itemprop="description" content="Build a Static Responsive website using HTML, CSS and Bootstrap." />
-        <meta itemprop="image" content="" />
-
-        <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://assignment-1-mauve-rho.vercel.app/" />
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Assignment No: 1" />
-        <meta property="og:description" content="Build a Static Responsive website using HTML, CSS and Bootstrap." />
-        <meta property="og:image" content="" />
-
-        <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Assignment No: 1" />
-        <meta name="twitter:description" content="Build a Static Responsive website using HTML, CSS and Bootstrap." />
-        <meta name="twitter:image" content="" />
+        <title>Responsive Header & Sidebar</title>
 
         <!-- Bootstrap CSS -->
         <link
