--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive Header & Sidebar</title>
+        <title>Assignment No: 1</title>
 
         <!-- Bootstrap CSS -->
         <link
